--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm-run-all -p nodemon browsersync",
     "nodemon": "nodemon server.js",
-    "browsersync": "browser-sync start --proxy http://localhost:4000 --files 'public,views'"
+    "browsersync": "browser-sync start --proxy http://localhost:4000 --files 'public,views' --no-inject-changes"
   },
   "dependencies": {
     "express": "^4.17.1",
