--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "start": "npm-run-all -p nodemon browsersync",
     "nodemon": "nodemon server.js",
-    "browsersync": "browser-sync start --proxy http://localhost:4000 --files 'public,views' --no-inject-changes"
+    "browsersync": "browser-sync start --proxy http://localhost:4000 --files 'public, src/app/views' --no-inject-changes"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "intl": "^1.2.5",
     "method-override": "^3.0.0",
-    "nunjucks": "^3.2.2"
+    "nunjucks": "^3.2.2",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "browser-sync": "^2.26.13",
