--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "npm-run-all -p nodemon browsersync",
-    "nodemon": "nodemon server.js",
+    "nodemon": "nodemon src/server.js",
     "browsersync": "browser-sync start --proxy http://localhost:4000 --files 'public, src/app/views' --no-inject-changes"
   },
   "dependencies": {
